fix: put img bg behind

--- a/src/layout/Layout.css
+++ b/src/layout/Layout.css
@@ -54,7 +54,7 @@
     right: 50%;
     transform: translate(50%,-50%);
     width: 30%;
-    opacity: 0.02;
+    opacity: 0.04;
 }
 
 
